# CPP-Reflection

CMake/Modules/: FindLibClang.cmake
CMake/Parser/: CMakeLists.txt
Source/Parser/: MetaUtils.cpp  Precompiled.h  ReflectionParser.cpp
Source/Runtime/: Argument.cpp  Argument.h  Enum.cpp  Invokable.h  MetaManager.h  MetaProperty.h  Method.h  ReflectionDatabase.h  Type.h  TypeData.h  TypeInfo.h  UrsinePrecompiled.h  Variant.cpp  Variant.h  VariantContainer.h
Source/Runtime/Impl/: Invokable.hpp  MetaProperty.hpp  TypeInfo.hpp
Tests/Simple/: Meta.Generated.cpp  Meta.Generated.h  Reflection.h  SoundEffect.h  main.cpp
